# ogg

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ogg.yml
examples/: crc32-table-generate.rs  dump-all.rs  format-info.rs  repack.rs
src/: backports.rs  buf_reader.rs  crc.rs  lib.rs  reading.rs  test.rs  writing.rs
tests/: async_read.rs
