[package]
name = "ogg"
version = "0.8.0"
authors = ["est31 <MTest31@outlook.com>"]
description = "Ogg container decoder and encoder written in pure Rust"
license = "BSD-3-Clause"
keywords = ["ogg", "decoder", "encoder", "xiph"]
documentation = "https://docs.rs/ogg/0.8.0"
repository = "https://github.com/RustAudio/ogg"
readme = "README.md"

[lib]
name = "ogg"

[dependencies]
byteorder = "1.0"
tokio-io = { version = "0.1", optional = true }
futures = { version = "0.1", optional = true }
bytes = { version = "0.4", optional = true }

[dev-dependencies]
rand = "0.3"

[features]
async = ["tokio-io", "futures", "bytes"]
