[package]
name = "ogg"
edition = "2021"
version = "0.8.0"
authors = ["est31 <MTest31@outlook.com>"]
description = "Ogg container decoder and encoder written in pure Rust"
license = "BSD-3-Clause"
keywords = ["ogg", "decoder", "encoder", "xiph"]
documentation = "https://docs.rs/ogg/0.8.0"
repository = "https://github.com/RustAudio/ogg"
readme = "README.md"

[lib]
name = "ogg"

[dependencies]
byteorder = "1"
tokio = { version = "1", optional = true }
tokio-util = { version = "0.6", features = ["codec"], optional = true }
futures-util = { version = "0.3", features = ["io"], optional = true }
bytes = { version = "1", optional = true }
pin-project = { version = "1", optional = true }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1", features = ["full"] }

[features]
async = ["tokio", "tokio-util", "futures-util", "bytes", "pin-project"]
