[package]
name = "ogg"
edition = "2021"
version = "0.9.2"
authors = ["est31 <MTest31@outlook.com>"]
description = "Ogg container decoder and encoder written in pure Rust"
license = "BSD-3-Clause"
keywords = ["ogg", "decoder", "encoder", "xiph"]
documentation = "https://docs.rs/ogg/0.8.0"
repository = "https://github.com/RustAudio/ogg"
readme = "README.md"
rust-version = "1.61.0"

[lib]
name = "ogg"

[dependencies]
byteorder = "1.0"
futures-core = { version = "0.3", optional = true }
futures-io = { version = "0.3", optional = true }
tokio = { version = "1", optional = true }
tokio-util = { version = "0.6", features = ["codec", "compat"], optional = true }
bytes = { version = "1", optional = true }
pin-project = { version = "1", optional = true }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

[features]
async = ["futures-core", "futures-io", "tokio", "tokio-util", "bytes", "pin-project"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
